update PyPI package

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -12,12 +12,12 @@ jobs:
       - name: build wheel
         working-directory: .
         run: |
-          cp -r fdrtd package
-          cd package
+          cp -r fdrtd packages/pypi/fdrtd-simon
+          cd packages/pypi/fdrtd-simon
           python setup.py sdist bdist_wheel
       - name: publish package
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN_FDRTD_SIMON }}
-          packages_dir: package/dist
+          packages_dir: packages/pypi/fdrtd-simon/dist
