--- a/pypi/setup.cfg
+++ b/pypi/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fdrtd-simon
-version = 0.2.2
+version = 0.5.0
 author = bytes for life GmbH
 author_email = support@fdrtd.com
 description = Federated Secure Computing
@@ -26,5 +26,9 @@ classifiers =
 [options]
 install_requires =
     fdrtd
+    numpy
+    secrets
+    time
+    uuid
 include_package_data=True
 packages = find_namespace:
