--- a/pypi/setup.cfg
+++ b/pypi/setup.cfg
@@ -25,7 +25,11 @@ classifiers =
 
 [options]
 install_requires =
+    binascii
+    hashlib
     fdrtd
+    fdrtd-server
+    math
     numpy
     secrets
     time
