revert to using the representation client

--- a/pypi/setup.cfg
+++ b/pypi/setup.cfg
@@ -25,8 +25,8 @@ classifiers =
 
 [options]
 install_requires =
-    fdrtd
     fdrtd-server
     numpy
+    representation
 include_package_data=True
 packages = find_namespace:
