--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install fdrtd fdrtd-server numpy anybadge
+        pip install fdrtd-server numpy representation anybadge
     - name: Run unit tests
       continue-on-error: true
       run: |
