rename pypi package

--- a/pypi/setup.cfg
+++ b/pypi/setup.cfg
@@ -25,7 +25,7 @@ classifiers =
 
 [options]
 install_requires =
-    fdrtd-server
+    fdrtd
     numpy
     representation
 include_package_data=True
